--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,15 @@
      "description": "Translate text wrapped in !(...) using your own language mapping.",
      "permissions": ["storage", "activeTab", "scripting"],
      "action": {
-       "default_popup": "popup.html",
-       "default_title": "Languagizer"
-     },
+    "default_popup": "popup.html",
+    "default_title": "Languagizer"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
      "content_scripts": [
        {
          "matches": ["<all_urls>"],
