--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
      "description": "Translate text wrapped in !(...) using your own language mapping.",
      "permissions": ["storage", "activeTab", "scripting"],
      "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup/popup.html",
     "default_title": "Languagizer"
   },
   "icons": {
@@ -17,7 +17,7 @@
      "content_scripts": [
        {
          "matches": ["<all_urls>"],
-         "js": ["content.js", "validator.js"],
+         "js": ["scripts/content.js", "scripts/validator.js"],
          "run_at": "document_idle"
        }
      ],
